# graphic-lab4

./: .gitmodules  CMakeLists.txt  README.md
report/: report.md
src/: cone.cpp  cone.h  cube.cpp  cube.h  main.cpp  pyramid.cpp  pyramid.h  shape.cpp  shape.h  vector2d.cpp  vector2d.h
